Fix outline not covering fade-out, better this time.

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -38,9 +38,6 @@ div.people, div.welcome
 div.people
   height: 16em
 
-div.welcome
-  padding-left: 1px
-
 form
   margin: 0.6em 0 1.3em
 
@@ -52,9 +49,7 @@ input
   width: 20em
 
 input:focus
-  outline: 0
-
-.thought
+  outline: 4px solid transparent
 
 h2
   /* font-size: 0.8em; */
